CSS: fix ugly scrollbar for Firefox

--- a/src/main/webapp/sass/_common.scss
+++ b/src/main/webapp/sass/_common.scss
@@ -784,6 +784,12 @@ figure.medium-image {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        scrollbar-color: #333 #000;
+    }
+}
+
 @import "form";
 @import "mainpage";
 @import "topic_page";
